introduce question slider navigation buttons

--- a/content/i18n/de-CH.json
+++ b/content/i18n/de-CH.json
@@ -1,4 +1,6 @@
 {
   "action.learnMore": "Mehr erfahren",
+  "action.next": "Nächste",
+  "action.previous": "Vorherige",
   "language": "Deutsch"
 }
