Add imprint page

--- a/content/i18n/de-CH.json
+++ b/content/i18n/de-CH.json
@@ -4,6 +4,7 @@
   "action.previous": "Vorherige",
   "language": "Deutsch",
   "menu.future": "Zukunft",
+  "menu.imprint": "Impressum",
   "menu.past": "Vergangenheit",
   "menu.present": "Gegenwart"
 }
