--- a/content/i18n/en-US.json
+++ b/content/i18n/en-US.json
@@ -4,6 +4,7 @@
   "action.previous": "Previous",
   "language": "English",
   "menu.future": "Future",
+  "menu.imprint": "Imprint",
   "menu.past": "Past",
   "menu.present": "Present"
 }
