--- a/content/i18n/en-US.json
+++ b/content/i18n/en-US.json
@@ -7,6 +7,7 @@
   "menu.imprint": "Imprint",
   "menu.past": "Past",
   "menu.present": "Present",
+  "menu.toThePresent": "To the present",
   "page.not-found.action": "To the home page",
   "page.not-found.content": "Unfortunately the requested page couldn't be found.",
   "page.not-found.title": "Page not found"
