--- a/content/i18n/de-CH.json
+++ b/content/i18n/de-CH.json
@@ -7,6 +7,7 @@
   "menu.imprint": "Impressum",
   "menu.past": "Vergangenheit",
   "menu.present": "Gegenwart",
+  "menu.toThePresent": "In die Gegenwart",
   "page.not-found.action": "Zur Startseite",
   "page.not-found.content": "Leider konnte die angeforderte Seite nicht gefunden werden.",
   "page.not-found.title": "Seite nicht gefunden"
