Add navigation to past page

--- a/content/i18n/de-CH.json
+++ b/content/i18n/de-CH.json
@@ -3,6 +3,7 @@
   "action.next": "Nächste",
   "action.previous": "Vorherige",
   "language": "Deutsch",
+  "menu.backToTheFuture": "Die Vergangenheit können wir nicht ändern, aber die Zukunft.",
   "menu.future": "Zukunft",
   "menu.imprint": "Impressum",
   "menu.past": "Vergangenheit",
