--- a/content/i18n/en-US.json
+++ b/content/i18n/en-US.json
@@ -3,6 +3,7 @@
   "action.next": "Next",
   "action.previous": "Previous",
   "language": "English",
+  "menu.backToTheFuture": "We cannot change the history, but we can change the future.",
   "menu.future": "Future",
   "menu.imprint": "Imprint",
   "menu.past": "Past",
