--- a/content/i18n/de-CH.json
+++ b/content/i18n/de-CH.json
@@ -4,14 +4,21 @@
   "action.previous": "Vorherige",
   "language": "Deutsch",
   "menu.backToTheFuture": "Die Vergangenheit können wir nicht ändern, aber die Zukunft.",
+  "menu.collaboration": "Zusammenarbeit",
+  "menu.cooperation": "Mitarbeit",
+  "menu.formation": "Entstehung",
   "menu.future": "Zukunft",
   "menu.imprint": "Impressum",
   "menu.past": "Vergangenheit",
   "menu.present": "Gegenwart",
+  "menu.references": "Referenzen",
+  "menu.second": "Angebote",
+  "menu.team": "Team",
   "menu.toTheFuture": "In die Zukunft",
   "menu.toThePast": "In die Vergangenheit",
   "menu.toThePresent": "In die Gegenwart",
   "menu.togetherAhead": "Trete in Kontakt, um gemeinsam die Zukunft zu gestalten.",
+  "menu.values": "Werte",
   "page.not-found.action": "Zur Startseite",
   "page.not-found.content": "Leider konnte die angeforderte Seite nicht gefunden werden.",
   "page.not-found.title": "Seite nicht gefunden"
