--- a/content/i18n/en-US.json
+++ b/content/i18n/en-US.json
@@ -4,14 +4,22 @@
   "action.previous": "Previous",
   "language": "English",
   "menu.backToTheFuture": "We cannot change the history, but we can change the future.",
+  "menu.collaboration": "Collaboration",
+  "menu.cooperation": "Cooperation",
+  "menu.formation": "Formation",
   "menu.future": "Future",
   "menu.imprint": "Imprint",
+  "menu.jobs": "Jobs",
   "menu.past": "Past",
   "menu.present": "Present",
+  "menu.references": "References",
+  "menu.second": "Offers",
+  "menu.team": "Team",
   "menu.toTheFuture": "To the future",
   "menu.toThePast": "To the past",
   "menu.toThePresent": "To the present",
   "menu.togetherAhead": "Get in touch, to shape the future together.",
+  "menu.values": "Values",
   "page.not-found.action": "To the home page",
   "page.not-found.content": "Unfortunately the requested page couldn't be found.",
   "page.not-found.title": "Page not found"
