chore: scaffold sub pages

--- a/content/i18n/de-CH.json
+++ b/content/i18n/de-CH.json
@@ -5,14 +5,15 @@
   "language": "Deutsch",
   "menu.backToTheFuture": "Die Vergangenheit können wir nicht ändern, aber die Zukunft.",
   "menu.collaboration": "Zusammenarbeit",
-  "menu.cooperation": "Mitarbeit",
+  "menu.participation": "Mitarbeit",
   "menu.formation": "Entstehung",
   "menu.future": "Zukunft",
   "menu.imprint": "Impressum",
   "menu.past": "Vergangenheit",
   "menu.present": "Gegenwart",
   "menu.references": "Referenzen",
-  "menu.second": "Angebote",
+  "menu.services": "Dienstleistungen",
+  "menu.strengths": "Stärken",
   "menu.team": "Team",
   "menu.toTheFuture": "In die Zukunft",
   "menu.toThePast": "In die Vergangenheit",
