--- a/content/i18n/en-US.json
+++ b/content/i18n/en-US.json
@@ -5,15 +5,16 @@
   "language": "English",
   "menu.backToTheFuture": "We cannot change the history, but we can change the future.",
   "menu.collaboration": "Collaboration",
-  "menu.cooperation": "Cooperation",
   "menu.formation": "Formation",
   "menu.future": "Future",
   "menu.imprint": "Imprint",
   "menu.jobs": "Jobs",
+  "menu.participation": "Participation",
   "menu.past": "Past",
   "menu.present": "Present",
   "menu.references": "References",
-  "menu.second": "Offers",
+  "menu.services": "Services",
+  "menu.strengths": "Strengths",
   "menu.team": "Team",
   "menu.toTheFuture": "To the future",
   "menu.toThePast": "To the past",
