--- a/content/i18n/en-US.json
+++ b/content/i18n/en-US.json
@@ -21,7 +21,15 @@
   "menu.toThePresent": "To the present",
   "menu.togetherAhead": "Get in touch, to shape the future together.",
   "menu.values": "Values",
+  "page.collaboration.title": "Collaboration",
+  "page.formation.title": "Formation",
   "page.not-found.action": "To the home page",
   "page.not-found.content": "Unfortunately the requested page couldn't be found.",
-  "page.not-found.title": "Page not found"
+  "page.not-found.title": "Page not found",
+  "page.participation.title": "Participation",
+  "page.references.title": "References",
+  "page.services.title": "Services",
+  "page.strengths.title": "Strengths",
+  "page.team.title": "Team",
+  "page.values.title": "Values"
 }
