chore: translate past page info

--- a/content/i18n/de-CH.json
+++ b/content/i18n/de-CH.json
@@ -22,10 +22,13 @@
   "menu.values": "Werte",
   "page.collaboration.title": "Zusammenarbeit",
   "page.formation.title": "Entstehung",
+  "page.index.title": "Companions for your next software project?",
   "page.not-found.action": "Zur Startseite",
   "page.not-found.content": "Leider konnte die angeforderte Seite nicht gefunden werden.",
   "page.not-found.title": "Seite nicht gefunden",
   "page.participation.title": "Mitarbeit",
+  "page.past.description": "Erfahre mehr über unsere Entstehungsgeschichte und umgesetzten Projekte.",
+  "page.past.title": "Unsere Vergangenheit",
   "page.references.title": "Referenzen",
   "page.services.title": "Dienstleistungen",
   "page.strengths.title": "Stärken",
