--- a/content/i18n/en-US.json
+++ b/content/i18n/en-US.json
@@ -22,10 +22,13 @@
   "menu.values": "Values",
   "page.collaboration.title": "Collaboration",
   "page.formation.title": "Formation",
+  "page.index.title": "Home",
   "page.not-found.action": "To the home page",
   "page.not-found.content": "Unfortunately the requested page couldn't be found.",
   "page.not-found.title": "Page not found",
   "page.participation.title": "Participation",
+  "page.past.description": "Find out more about our history and implemented projects.",
+  "page.past.title": "Our past",
   "page.references.title": "References",
   "page.services.title": "Services",
   "page.strengths.title": "Strengths",
