feat: add page data to all pages

--- a/content/i18n/en-US.json
+++ b/content/i18n/en-US.json
@@ -22,13 +22,31 @@
   "menu.values": "Values",
   "page.collaboration.title": "Collaboration",
   "page.formation.title": "Formation",
+  "page.future.collaboration.description": "An exciting project that you would like to discuss with us?",
+  "page.future.collaboration.title": "Collaboration",
+  "page.future.description": "Here you can find out more about the possibility of implementing exciting IT projects or training courses with us.",
+  "page.future.participation.description": "We don't have normal jobs.",
+  "page.future.participation.title": "Participation",
+  "page.future.services.description": "You can find out what we do here.",
+  "page.future.title": "future",
   "page.index.title": "Home",
   "page.not-found.action": "To the home page",
   "page.not-found.content": "Unfortunately the requested page couldn't be found.",
   "page.not-found.title": "Page not found",
   "page.participation.title": "Participation",
   "page.past.description": "Find out more about our history and implemented projects.",
+  "page.past.formation.description": "Our career is described on this page.",
+  "page.past.references.description": "Find out more about the projects we have set up or are still working on.",
+  "page.past.references.title": "References",
   "page.past.title": "Our past",
+  "page.present.description": "Find out more about who we are and what we do.",
+  "page.present.strengths.description": "The strengths and skills that make us special.",
+  "page.present.strengths.title": "Strengths",
+  "page.present.team.description": "Everything about who we are.",
+  "page.present.team.title": "team",
+  "page.present.title": "What we are currently doing",
+  "page.present.values.description": "We are guided by a few fixed values, which are described here.",
+  "page.present.values.title": "More about our values",
   "page.references.title": "References",
   "page.services.title": "Services",
   "page.strengths.title": "Strengths",
