feat: generate meta data globally

--- a/content/i18n/de-CH.json
+++ b/content/i18n/de-CH.json
@@ -53,5 +53,6 @@
   "page.services.title": "Dienstleistungen",
   "page.strengths.title": "Stärken",
   "page.team.title": "Team",
-  "page.values.title": "Werte"
+  "page.values.title": "Werte",
+  "site.meta.title": "openscript GmbH"
 }
