--- a/content/i18n/en-US.json
+++ b/content/i18n/en-US.json
@@ -51,5 +51,6 @@
   "page.services.title": "Services",
   "page.strengths.title": "Strengths",
   "page.team.title": "Team",
-  "page.values.title": "Values"
+  "page.values.title": "Values",
+  "site.meta.title": "openscript Ltd."
 }
