--- a/content/i18n/de-CH.json
+++ b/content/i18n/de-CH.json
@@ -20,39 +20,36 @@
   "menu.toThePresent": "In die Gegenwart",
   "menu.togetherAhead": "Trete in Kontakt, um gemeinsam die Zukunft zu gestalten.",
   "menu.values": "Werte",
-  "page.collaboration.title": "Zusammenarbeit",
-  "page.formation.title": "Entstehung",
-  "page.future.collaboration.description": "Ein spannendes Projekt, welches du mit uns besprechen möchtest?",
-  "page.future.collaboration.title": "Zusammenarbeit",
-  "page.future.description": "Über die Möglichkeit mit uns spannende Informatikprojekte oder Schulungen umzusetzen, kann hier mehr in Erfahrung gebracht werden.",
-  "page.future.participation.description": "Bei uns gibt es keine normalen Jobs.",
-  "page.future.participation.title": "Mitarbeit",
-  "page.future.services.description": "Was wir tun, erfährst du hier.",
-  "page.future.services.title": "Dienstleistungen",
-  "page.future.title": "Zukunft",
-  "page.index.title": "Companions for your next software project?",
+  "page.404.html.meta.description": "Leider wurde die gesuchte Seite nicht gefunden.",
+  "page.404.html.meta.title": "Seite nicht gefunden",
+  "page.404.meta.description": "Leider wurde die gesuchte Seite nicht gefunden.",
+  "page.404.meta.title": "Seite nicht gefunden",
+  "page.future.collaboration.meta.description": "Ein spannendes Projekt, welches du mit uns besprechen möchtest?",
+  "page.future.collaboration.meta.title": "Zusammenarbeit",
+  "page.future.meta.description": "Über die Möglichkeit mit uns spannende Informatikprojekte oder Schulungen umzusetzen, kann hier mehr in Erfahrung gebracht werden.",
+  "page.future.meta.title": "Zukunft",
+  "page.future.participation.meta.description": "Bei uns gibt es keine normalen Jobs.",
+  "page.future.participation.meta.title": "Mitarbeit",
+  "page.future.services.meta.description": "Was wir tun, erfährst du hier.",
+  "page.future.services.meta.title": "Dienstleistungen",
+  "page.index.meta.description": "Gefährten für Abenteuer in der Welt von Bits und Bytes.",
+  "page.index.meta.title": "Companions for your next software project?",
   "page.not-found.action": "Zur Startseite",
   "page.not-found.content": "Leider konnte die angeforderte Seite nicht gefunden werden.",
-  "page.not-found.title": "Seite nicht gefunden",
-  "page.participation.title": "Mitarbeit",
-  "page.past.description": "Erfahre mehr über unsere Entstehungsgeschichte und umgesetzten Projekte.",
-  "page.past.formation.description": "Unser Werdegang ist auf dieser Seite beschreiben.",
-  "page.past.formation.title": "Entstehung und Ereignisse",
-  "page.past.references.description": "Erfahre mehr mit zu den Projekten, welche wir auf die Beine gestellt haben oder noch daran arbeiten.",
-  "page.past.references.title": "Referenzen",
-  "page.past.title": "Unsere Vergangenheit",
-  "page.present.description": "Erfahre mehr darüber wer wir sind und was wir tun.",
-  "page.present.strengths.description": "Die Stärken und Fähigkeiten, welche uns aus machen.",
-  "page.present.strengths.title": "Stärken",
-  "page.present.team.description": "Alles darüber, wer wir sind.",
-  "page.present.team.title": "Team",
-  "page.present.title": "Was wir gegenwärtig tun",
-  "page.present.values.description": "Wir orientieren uns nach wenigen fixen Werten, welche hier beschrieben sind.",
-  "page.present.values.title": "Mehr über unsere Werte",
-  "page.references.title": "Referenzen",
-  "page.services.title": "Dienstleistungen",
-  "page.strengths.title": "Stärken",
-  "page.team.title": "Team",
-  "page.values.title": "Werte",
+  "page.not-found.meta.title": "Seite nicht gefunden",
+  "page.past.formation.meta.description": "Unser Werdegang ist auf dieser Seite beschreiben.",
+  "page.past.formation.meta.title": "Entstehung und Ereignisse",
+  "page.past.meta.description": "Erfahre mehr über unsere Entstehungsgeschichte und umgesetzten Projekte.",
+  "page.past.meta.title": "Unsere Vergangenheit",
+  "page.past.references.meta.description": "Erfahre mehr mit zu den Projekten, welche wir auf die Beine gestellt haben oder noch daran arbeiten.",
+  "page.past.references.meta.title": "Referenzen",
+  "page.present.meta.description": "Erfahre mehr darüber wer wir sind und was wir tun.",
+  "page.present.meta.title": "Was wir gegenwärtig tun",
+  "page.present.strengths.meta.description": "Die Stärken und Fähigkeiten, welche uns aus machen.",
+  "page.present.strengths.meta.title": "Stärken",
+  "page.present.team.meta.description": "Alles darüber, wer wir sind.",
+  "page.present.team.meta.title": "Team",
+  "page.present.values.meta.description": "Wir orientieren uns nach wenigen fixen Werten, welche hier beschrieben sind.",
+  "page.present.values.meta.title": "Mehr über unsere Werte",
   "site.meta.title": "openscript GmbH"
 }
