--- a/content/i18n/en-US.json
+++ b/content/i18n/en-US.json
@@ -20,37 +20,36 @@
   "menu.toThePresent": "To the present",
   "menu.togetherAhead": "Get in touch, to shape the future together.",
   "menu.values": "Values",
-  "page.collaboration.title": "Collaboration",
-  "page.formation.title": "Formation",
-  "page.future.collaboration.description": "An exciting project that you would like to discuss with us?",
-  "page.future.collaboration.title": "Collaboration",
-  "page.future.description": "Here you can find out more about the possibility of implementing exciting IT projects or training courses with us.",
-  "page.future.participation.description": "We don't have normal jobs.",
-  "page.future.participation.title": "Participation",
-  "page.future.services.description": "You can find out what we do here.",
-  "page.future.title": "future",
-  "page.index.title": "Home",
+  "page.404.html.meta.description": "Unfortunately, the page you were looking for was not found.",
+  "page.404.html.meta.title": "Page not found",
+  "page.404.meta.description": "Unfortunately, the page you were looking for was not found.",
+  "page.404.meta.title": "Page not found",
+  "page.future.collaboration.meta.description": "An exciting project that you would like to discuss with us?",
+  "page.future.collaboration.meta.title": "Collaboration",
+  "page.future.meta.description": "Here you can find out more about the possibility of implementing exciting IT projects or training courses with us.",
+  "page.future.meta.title": "future",
+  "page.future.participation.meta.description": "We don't have normal jobs.",
+  "page.future.participation.meta.title": "Participation",
+  "page.future.services.meta.description": "You can find out what we do here.",
+  "page.future.services.meta.title": "Services",
+  "page.index.meta.description": "Companions for adventures in the world of bits and bytes.",
+  "page.index.meta.title": "Home",
   "page.not-found.action": "To the home page",
   "page.not-found.content": "Unfortunately the requested page couldn't be found.",
-  "page.not-found.title": "Page not found",
-  "page.participation.title": "Participation",
-  "page.past.description": "Find out more about our history and implemented projects.",
-  "page.past.formation.description": "Our career is described on this page.",
-  "page.past.references.description": "Find out more about the projects we have set up or are still working on.",
-  "page.past.references.title": "References",
-  "page.past.title": "Our past",
-  "page.present.description": "Find out more about who we are and what we do.",
-  "page.present.strengths.description": "The strengths and skills that make us special.",
-  "page.present.strengths.title": "Strengths",
-  "page.present.team.description": "Everything about who we are.",
-  "page.present.team.title": "team",
-  "page.present.title": "What we are currently doing",
-  "page.present.values.description": "We are guided by a few fixed values, which are described here.",
-  "page.present.values.title": "More about our values",
-  "page.references.title": "References",
-  "page.services.title": "Services",
-  "page.strengths.title": "Strengths",
-  "page.team.title": "Team",
-  "page.values.title": "Values",
+  "page.not-found.meta.title": "Page not found",
+  "page.past.formation.meta.description": "Our career is described on this page.",
+  "page.past.formation.meta.title": "Genesis and events",
+  "page.past.meta.description": "Find out more about our history and implemented projects.",
+  "page.past.meta.title": "Our past",
+  "page.past.references.meta.description": "Find out more about the projects we have set up or are still working on.",
+  "page.past.references.meta.title": "References",
+  "page.present.meta.description": "Find out more about who we are and what we do.",
+  "page.present.meta.title": "What we are currently doing",
+  "page.present.strengths.meta.description": "The strengths and skills that make us special.",
+  "page.present.strengths.meta.title": "Strengths",
+  "page.present.team.meta.description": "Everything about who we are.",
+  "page.present.team.meta.title": "team",
+  "page.present.values.meta.description": "We are guided by a few fixed values, which are described here.",
+  "page.present.values.meta.title": "More about our values",
   "site.meta.title": "openscript Ltd."
 }
