feat: add metadata to generic pages

--- a/content/data/pages/imprint.de.mdx
+++ b/content/data/pages/imprint.de.mdx
@@ -1,5 +1,6 @@
 ---
 title: Impressum
+description: Alle Angaben zum Eigentümer dieser Seite, sowie die Haftungserklärung und Hinweise zu den erhobenen Daten.
 ---
 
 ## Impressum
