--- a/content/data/pages/imprint.de.mdx
+++ b/content/data/pages/imprint.de.mdx
@@ -3,9 +3,9 @@ title: Impressum
 description: Alle Angaben zum Eigentümer dieser Seite, sowie die Haftungserklärung und Hinweise zu den erhobenen Daten.
 ---
 
-## Impressum
+# Impressum
 
-### Eigentümer
+## Eigentümer
 
 Unterhalb sind die Angaben zur Identität des Eigentümers nach [UWG Artikel 3](http://www.admin.ch/opc/de/classified-compilation/19860391/index.html#a3) zu finden.
 
@@ -13,7 +13,7 @@ openscript GmbH\
 Europa-Strasse 30\
 8152 Glattbrugg
 
-### Haftungserklärung
+## Haftungserklärung
 
 Haftungsansprüche gegenüber dem Eigentümer und den Autoren von [openscript.ch](https://openscript.ch), die sich auf Schäden welcher Art auch immer beziehen, welche durch die Nutzung oder Nichtnutzung der angebotenen Informationen und Datensätzen bzw. durch die Nutzung fehlerhafter oder unvollständiger Informationen verursacht wurden, sind grundsätzlich ausgeschlossen!
 
@@ -21,7 +21,7 @@ Die platzierten Angebote sind alle unverbindlich. Der Eigentümer behält sich d
 
 Verweise zu Inhalte Dritter liegen ausserhalb des Verantwortungsbereichs. Die Verantwortung wird in jedem Fall abgelehnt.
 
-### Datenschutz
+## Datenschutz
 
 Aufgrund gesetzlicher Vorgaben sind wir in bestimmten Fällen verpflichtet, Ihre personenbezogenen Daten an Dritte weiterzugeben. Dies ist zum Beispiel der Fall, wenn der Verdacht einer Straftat oder des Missbrauchs dieser Webseite vorliegt. Wir werden Ihre Daten nur auf Grund eines richterlichen Beschlusses an die Strafverfolungsbehörden weitergeben. Falls es jedoch in unserem eigenen Interesse liegt, dass ein Missbrauch aufgeklärt wird, weil die Nutzer oder der Seitenbetreiber selbst zu den Geschädigten gehören, kann auch auf die richterliche Anordnung verzichtet werden.
 
