--- a/content/data/pages/imprint.en.mdx
+++ b/content/data/pages/imprint.en.mdx
@@ -3,9 +3,9 @@ title: Imprint
 description: All information about the owner of this site, as well as the liability statement and notes about the data collected.
 ---
 
-## Imprint
+# Imprint
 
-### Owner
+## Owner
 
 The identity of the owner, according to [UWG Art. 3](http://www.admin.ch/opc/de/classified-compilation/19860391/index.html#a3) is stated below.
 
@@ -13,7 +13,7 @@ openscript GmbH\
 Europa-Strasse 30\
 8152 Glattbrugg
 
-### Limitation of liability
+## Limitation of liability
 
 All liability of the owner and the other authors for direct, indirect or secondary damage suffered as a result of access to the elements of openscript.ch or to use of that site or as a consequence of impossibility of access to or use thereof or links to other websites, is hereby declined.
 
@@ -21,7 +21,7 @@ All offers are without obligation. The owner reserves the right to change or del
 
 The [openscript.ch](https://openscript.ch) website contains links to content maintained by third parties, which are outside our area of responsibility. Any responsibility is declined.
 
-### Data protection
+## Data protection
 
 Due to legal requirements, we are obliged in certain cases to pass on your personal data to third parties. This is the case, for example, if there is suspicion of a criminal offense or misuse of this website. We will only pass on your data to law enforcement authorities on the basis of a court order. However, if it is in our own interest that an abuse is cleared up because the users or the website operator themselves are among the injured parties, the judicial order can also be waived.
 
