feat: add team page summary

--- a/content/i18n/en-US.json
+++ b/content/i18n/en-US.json
@@ -48,7 +48,7 @@
   "page.present.strengths.meta.description": "The strengths and skills that make us special.",
   "page.present.strengths.meta.title": "Strengths",
   "page.present.team.meta.description": "Everything about who we are.",
-  "page.present.team.meta.title": "team",
+  "page.present.team.meta.title": "Team",
   "page.present.values.meta.description": "We are guided by a few fixed values, which are described here.",
   "page.present.values.meta.title": "More about our values",
   "site.meta.title": "openscript Ltd."
