chore: add sections to teams

--- a/content/data/pages/imprint.de.mdx
+++ b/content/data/pages/imprint.de.mdx
@@ -1,6 +1,7 @@
 ---
 title: Impressum
 description: Alle Angaben zum Eigentümer dieser Seite, sowie die Haftungserklärung und Hinweise zu den erhobenen Daten.
+type: content
 ---
 
 # Impressum
