--- a/content/data/pages/imprint.en.mdx
+++ b/content/data/pages/imprint.en.mdx
@@ -1,6 +1,7 @@
 ---
 title: Imprint
 description: All information about the owner of this site, as well as the liability statement and notes about the data collected.
+type: content
 ---
 
 # Imprint
