--- a/content/i18n/en-US.json
+++ b/content/i18n/en-US.json
@@ -49,6 +49,8 @@
   "page.present.strengths.meta.title": "Strengths",
   "page.present.team.meta.description": "Everything about who we are.",
   "page.present.team.meta.title": "Team",
+  "page.present.team.section.meet": "Meet",
+  "page.present.team.section.portraits": "Portraits",
   "page.present.values.meta.description": "We are guided by a few fixed values, which are described here.",
   "page.present.values.meta.title": "More about our values",
   "site.meta.title": "openscript Ltd."
