feat: add data protection

--- a/content/i18n/en-US.json
+++ b/content/i18n/en-US.json
@@ -5,6 +5,7 @@
   "language": "English",
   "menu.backToTheFuture": "We cannot change the history, but we can change the future.",
   "menu.collaboration": "Collaboration",
+  "menu.data-protection": "Data protection",
   "menu.formation": "Formation",
   "menu.future": "Future",
   "menu.imprint": "Imprint",
