--- a/content/i18n/de-CH.json
+++ b/content/i18n/de-CH.json
@@ -5,6 +5,7 @@
   "language": "Deutsch",
   "menu.backToTheFuture": "Die Vergangenheit können wir nicht ändern, aber die Zukunft.",
   "menu.collaboration": "Zusammenarbeit",
+  "menu.data-protection": "Datenschutz",
   "menu.formation": "Entstehung",
   "menu.future": "Zukunft",
   "menu.imprint": "Impressum",
