chore: adjust address

--- a/src/content/pages/de/imprint.mdx
+++ b/src/content/pages/de/imprint.mdx
@@ -3,11 +3,17 @@ path: impressum
 title: Impressum
 ---
 
-Unterhalb sind die Angaben zur Identität der Eigentümerschaft dieser Webseite zu finden.
+import Address from "../../../layouts/groups/Address.astro";
+import Phone from "../../../layouts/groups/Phone.astro";
+import Email from "../../../layouts/groups/Email.astro";
 
-openscript GmbH\
-Europa-Strasse 30\
-8152 Glattbrugg
+Nachfolgend sind die Angaben zur Identität der Eigentümerschaft dieser Webseite zu finden:
+
+<Address />
+<br />
+<Phone />
+<br />
+<Email />
 
 ## Haftungserklärung
 
