--- a/src/content/pages/en/imprint.mdx
+++ b/src/content/pages/en/imprint.mdx
@@ -3,11 +3,17 @@ path: imprint
 title: Imprint
 ---
 
-The identity of the owner of this website is stated below.
+import Address from "../../../layouts/groups/Address.astro";
+import Phone from "../../../layouts/groups/Phone.astro";
+import Email from "../../../layouts/groups/Email.astro";
 
-openscript GmbH\
-Europa-Strasse 30\
-8152 Glattbrugg
+The following contains the information about the ownership of this website:
+
+<Address />
+<br />
+<Phone />
+<br />
+<Email />
 
 ## Limitation of liability
 
