feat: add slider

--- a/src/content/sections/de/Spotlight.mdx
+++ b/src/content/sections/de/Spotlight.mdx
@@ -1,5 +1,7 @@
-<section>
+import SpotlightSection from '../../../layouts/groups/SpotlightSection.astro';
+
+<SpotlightSection>
 
 Hallo
 
-</section>
+</SpotlightSection>
