chore: enhance video card

--- a/src/content/sections/en/Spotlight.mdx
+++ b/src/content/sections/en/Spotlight.mdx
@@ -5,10 +5,10 @@ import ValuesVideo from '../../../../res/values.mp4';
 <SpotlightSection>
 
 <VideoCard
-  title="Our Values"
-  description="An overview of our core values."
   videoSrc={ValuesVideo}
-  videoType="mp4" />
+  videoType="mp4">
+  <p>At OpenScript, we believe in transparency, collaboration, and innovation. Our values drive everything we do.</p>
+</VideoCard>
 <div>
   Slide 2
 </div>
