--- a/src/content/sections/en/Spotlight.mdx
+++ b/src/content/sections/en/Spotlight.mdx
@@ -7,7 +7,8 @@ import ValuesVideo from '../../../../res/values.mp4';
 <VideoCard
   videoSrc={ValuesVideo}
   videoType="mp4">
-  <p>At OpenScript, we believe in transparency, collaboration, and innovation. Our values drive everything we do.</p>
+  <h3>Seamless</h3>
+  <p>We build software that integrates seamlessly into your existing workflow.</p>
 </VideoCard>
 <div>
   Slide 2
