chore: enhance slider

--- a/src/content/sections/en/Spotlight.mdx
+++ b/src/content/sections/en/Spotlight.mdx
@@ -1,5 +1,6 @@
 import SpotlightSection from '../../../layouts/sections/SpotlightSection.astro';
 import BackgroundVideo from '../../../components/BackgroundVideo.astro';
+import Button from '../../../components/Button.astro';
 import ValuesVideo from '../../../../res/values.mp4';
 
 <SpotlightSection>
@@ -8,13 +9,14 @@ import ValuesVideo from '../../../../res/values.mp4';
   <div slot="overlay" data-slide-id="0" class="centered">
     <h3>Seamless</h3>
     <p>We build software that integrates seamlessly into your existing workflow.</p>
+    <Button href="/present/values" withArrow>Our values</Button>
   </div>
   <div>
     Slide 2
   </div>
   <div slot="overlay" data-slide-id="1">
     <h3>Seamless</h3>
-    <p>We build software that integrates seamlessly into your existing workflow.</p>
+    <p>We build software that integrates seamlessly into your existing workflows.</p>
   </div>
   <div>
     Slide 3
