--- a/src/content/sections/en/Spotlight.mdx
+++ b/src/content/sections/en/Spotlight.mdx
@@ -1,25 +1,31 @@
 import SpotlightSection from '../../../layouts/sections/SpotlightSection.astro';
 import BackgroundVideo from '../../../components/BackgroundVideo.astro';
+import BackgroundImage from '../../../components/BackgroundImage.astro';
+import BackgroundIcon from '../../../components/BackgroundIcon.astro';
 import Button from '../../../components/Button.astro';
 import ValuesVideo from '../../../../res/values.mp4';
+import CollaborationImage from '../../../../res/collaboration.jpg';
+import ReferenceIcon from '../../../../res/dogli.svg';
 
 <SpotlightSection>
 
   <BackgroundVideo videoSrc={ValuesVideo} videoType="mp4" />
-  <div slot="overlay" data-slide-id="0" class="centered">
+  <div slot="overlay" data-slide-id="0" class="align-center">
     <h3>Seamless</h3>
     <p>We build software that integrates seamlessly into your existing workflow.</p>
-    <Button href="/present/values" withArrow>Our values</Button>
+    <Button href="/present/values" withArrow>Discover our values</Button>
   </div>
-  <div>
-    Slide 2
+  <BackgroundImage image={CollaborationImage} />
+  <div slot="overlay" data-slide-id="1" class="align-end">
+    <h3>Together on the right path</h3>
+    <p>Let's find together the right path to bring your software to reality.</p>
+    <Button href="/future/collaboration" withArrow>Collaborate with us</Button>
   </div>
-  <div slot="overlay" data-slide-id="1">
-    <h3>Seamless</h3>
-    <p>We build software that integrates seamlessly into your existing workflows.</p>
-  </div>
-  <div>
-    Slide 3
+  <BackgroundIcon image={ReferenceIcon} dominantColor="#155263" otherColor="#0D2F39" />
+  <div slot="overlay" data-slide-id="2" class="align-start">
+    <h3>Ultimate dog enrichment app</h3>
+    <p>A smartphone app with social media features to enrich your best friends life.</p>
+    <Button href="/past/references/dogli" withArrow>Check out DOGLi</Button>
   </div>
 
 </SpotlightSection>
