feat: add trades

--- a/src/content/sections/en/Services.mdx
+++ b/src/content/sections/en/Services.mdx
@@ -26,28 +26,88 @@ import Sprite from '../../../components/Sprite.astro';
     <TabsPanel id="software-panel" labelledby="software" selected>
       <p>We build robust software solutions tailored to diverse needs.</p>
       <ul>
-        <li>Web applications</li>
-        <li>Mobile applications</li>
-        <li>Identity and access management systems</li>
-        <li>Custom APIs</li>
-        <li>Calendaring solutions</li>
-        <li>Development operations</li>
+        <li>
+          <a href="#">
+            <Sprite name="web" />
+            Web applications
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <Sprite name="mobile" />
+            Mobile applications
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <Sprite name="iam" />
+            Identity and access management systems
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <Sprite name="api" />
+            Custom APIs
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <Sprite name="calendar" />
+            Calendaring solutions
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <Sprite name="server" />
+            DevOps and hosting solutions
+          </a>
+        </li>
       </ul>
     </TabsPanel>
     <TabsPanel id="education-panel" labelledby="education">
       <p>We share our expertise to empower your learning journey.</p>
       <ul>
-        <li>Courses</li>
-        <li>Workshops</li>
-        <li>Presentations</li>
+        <li>
+          <a href="#">
+            <Sprite name="course" />
+            Courses
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <Sprite name="workshop" />
+            Workshops
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <Sprite name="presentation" />
+            Presentations
+          </a>
+        </li>
       </ul>
     </TabsPanel>
     <TabsPanel id="consulting-panel" labelledby="consulting">
       <p>We guide you through technical challenges with practical advice.</p>
       <ul>
-        <li>Technical strategy</li>
-        <li>System architecture</li>
-        <li>Code reviews</li>
+        <li>
+          <a href="#">
+            <Sprite name="strategy" />
+            Technical strategy
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <Sprite name="architecture" />
+            System architecture
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <Sprite name="review" />
+            Code reviews
+          </a>
+        </li>
       </ul>
     </TabsPanel>
   </Tabs>
