--- a/src/content/sections/en/Services.mdx
+++ b/src/content/sections/en/Services.mdx
@@ -7,6 +7,8 @@ import Sprite from '../../../components/Sprite.astro';
 
 <ServicesSection>
 
+  <h2>What we offer</h2>
+
   <Tabs>
     <TabsList>
       <TabsTab id="software" controls="software-panel" selected>
