feat: add tools section

--- a/src/content/sections/en/Tools.mdx
+++ b/src/content/sections/en/Tools.mdx
@@ -1,5 +1,7 @@
 import ToolsSection from "../../../layouts/sections/ToolsSection.astro";
 
 <ToolsSection>
-  Here are some of the tools we use and recommend:
+  <h2 slot="title">What we work with</h2>
+
+  This is a selection of the tools and technologies we use on a daily basis. We believe that every programming language, framework, or tool has areas where it excels and areas where it is less suitable. An important factor in our choice of tools is the sustainability and long-term availability of the technologies used.
 </ToolsSection>
