feat: add references

--- a/src/content/sections/de/References.mdx
+++ b/src/content/sections/de/References.mdx
@@ -1,5 +1,5 @@
 import ReferencesSection from "../../../layouts/sections/ReferencesSection.astro";
 
 <ReferencesSection>
-  Hallo
+  <h2 slot="title">Wer uns vertraut</h2>
 </ReferencesSection>
