--- a/src/content/sections/en/References.mdx
+++ b/src/content/sections/en/References.mdx
@@ -1,5 +1,5 @@
 import ReferencesSection from "../../../layouts/sections/ReferencesSection.astro";
 
 <ReferencesSection>
-  Hello
+  <h2 slot="title">Who trusts us</h2>
 </ReferencesSection>
