--- a/src/content/sections/de/Services.mdx
+++ b/src/content/sections/de/Services.mdx
@@ -7,7 +7,7 @@ import Sprite from '../../../components/Sprite.astro';
 
 <ServicesSection>
 
-  <h2>What we offer</h2>
+  <h2>Was wir anbieten</h2>
 
   <Tabs>
     <TabsList>
