--- a/src/content/pages/de/imprint.mdx
+++ b/src/content/pages/de/imprint.mdx
@@ -7,6 +7,8 @@ import Address from "../../../layouts/groups/Address.astro";
 import Phone from "../../../layouts/groups/Phone.astro";
 import Email from "../../../layouts/groups/Email.astro";
 
+<section>
+
 Nachfolgend sind die Angaben zur Identität der Eigentümerschaft dieser Webseite zu finden:
 
 <Address />
@@ -26,3 +28,5 @@ Verweise zu Inhalte Dritter liegen ausserhalb des Verantwortungsbereichs. Die Ve
 ## Urheberrechtserklärung
 
 Die Urheber- und alle anderen Rechte an Inhalten, Bildern, Fotos oder anderen Dateien auf dieser Website, gehören ausschliesslich der oberhalb genannten Eigentümerschaft. Für die Reproduktion jeglicher Elemente ist die schriftliche Zustimmung der Eigentümerschaft als Urheberrechtsträgers im Voraus einzuholen.
+
+</section>
