--- a/src/content/pages/en/imprint.mdx
+++ b/src/content/pages/en/imprint.mdx
@@ -7,6 +7,8 @@ import Address from "../../../layouts/groups/Address.astro";
 import Phone from "../../../layouts/groups/Phone.astro";
 import Email from "../../../layouts/groups/Email.astro";
 
+<section>
+
 The following contains the information about the ownership of this website:
 
 <Address />
@@ -26,3 +28,5 @@ The website contains links to content maintained by third parties, which are out
 ## Copyright Statement
 
 The copyright and all other rights to content, images, photos, or other files on this website belong exclusively to the owner stated above. Written consent from the owner as the copyright holder must be obtained in advance for the reproduction of any elements.
+
+</section>
