--- a/src/content/sections/de/Tools.mdx
+++ b/src/content/sections/de/Tools.mdx
@@ -1,6 +1,6 @@
 import ToolsSection from "../../../layouts/sections/ToolsSection.astro";
 
-<ToolsSection>
+<ToolsSection class="dark-background">
   <h2 slot="title">Womit wir arbeiten</h2>
 
   Dies ist eine Auswahl der Werkzeuge und Technologien, die wir täglich verwenden. Wir sind überzeugt, dass jede Programmiersprache, jedes Framework oder Tool Bereiche hat, in denen es besonders geeignet ist, und andere, in denen es weniger passt. Ein wichtiger Faktor bei unserer Werkzeugwahl ist die Nachhaltigkeit und langfristige Verfügbarkeit der eingesetzten Technologien.
