--- a/src/content/pages/en/present/team.mdx
+++ b/src/content/pages/en/present/team.mdx
@@ -2,3 +2,18 @@
 path: team
 title: Team
 ---
+
+import Divider from "../../../../components/Divider.astro";
+import TeamSection from "../../../../layouts/sections/TeamSection.astro";
+
+<section>
+  Meet the team behind our company - a group of dedicated and skilled professionals who are passionate about creating custom software solutions that are tailored to the specific needs of our clients. We take great pride in our work and are committed to delivering the highest quality products and services. In addition to our software development expertise, we are also committed to advancing vocational education in Switzerland. We believe that providing apprenticeship opportunities and modern educational content to students is an important way to ensure that the next generation of software developers is well-equipped to meet the demands of the industry. As a team, we are open-minded, holacratic, and trustworthy, and we look forward to the opportunity to work together and embark on an adventure in the world of bits and bytes with you soon.
+</section>
+
+<Divider firstSegmentColor="var(--color-white)" />
+
+<TeamSection class="white-background">
+  <h2 slot="title">Portraits</h2>
+</TeamSection>
+
+<Divider firstSegmentColor="var(--color-white)" flipVertical />
