feat: add impressions section

--- a/src/content/sections/de/Questions.mdx
+++ b/src/content/sections/de/Questions.mdx
@@ -1,5 +1,3 @@
 import QuestionsSection from "../../../layouts/sections/QuestionsSection.astro";
 
-<QuestionsSection>
-  Hallo
-</QuestionsSection>
+<QuestionsSection />
